--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Valyrian Translator</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <h1>Valyrian Language Translator</h1>
+        </nav>
+    </header>
+
+    <main>
+        <textarea id="input"></textarea>
+        
+    </main>
 </body>
 </html>
