style : input, btn, output

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
     <main>
         <textarea id="input"></textarea>
-        
+        <button id="btn-translate">Translate</button>
+        <div id="output"></div>
     </main>
 </body>
 </html>
