--- a/index.html
+++ b/index.html
@@ -19,5 +19,7 @@
         <button id="btn-translate">Translate</button>
         <div id="output"></div>
     </main>
+    
+    <script src="app.js"></script>
 </body>
 </html>
