--- a/index.html
+++ b/index.html
@@ -5,20 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <title>Valyrian Translator</title>
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="navigation">
             <h1>Valyrian Language Translator</h1>
         </nav>
     </header>
 
     <main>
-        <textarea id="input"></textarea>
+        <textarea placeholder="Enter text in English to translate in Valyrian language" id="input"></textarea>
         <button id="btn-translate">Translate</button>
         <div id="output"></div>
     </main>
+
+    <footer class="footer">
+
+        <ul class="social-links">
+            <li><a href="mailto: reachout.amansingh@gmail.com"><i class='bx bxs-envelope'></i></a></li>
+
+            <li><a href="https://github.com/aman11s"><i class='bx bxl-github'></i></a></li>
+
+            <li><a href="https://twitter.com/aman11s"><i class='bx bxl-twitter'></i></a></li>
+
+            <li><a href="https://www.linkedin.com/in/aman11s/"><i class='bx bxl-linkedin-square'></i></a>
+            </li>
+        </ul>
+        <p>Made by Aman Singh | &copy; | 2021</p>
+    </footer>
     
     <script src="app.js"></script>
 </body>
