--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Are you a GOT fan then this WebApp is for you. This website translate English words/ sentences to Valyrian language.">
+    <meta name="author" content="Aman Singh">
     <link rel="stylesheet" href="style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <title>Valyrian Translator</title>
 </head>
+
 <body>
     <header>
         <nav class="navigation">
@@ -35,7 +43,8 @@
         </ul>
         <p>Made by Aman Singh | &copy; | 2021</p>
     </footer>
-    
+
     <script src="app.js"></script>
 </body>
+
 </html>
