--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Are you a GOT fan then this WebApp is for you. This website translate English words/ sentences to Valyrian language.">
     <meta name="author" content="Aman Singh">
+    <meta name="theme-color" content="#1f1d1d"> 
     <link rel="stylesheet" href="style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
