--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <nav class="navigation">
-            <h1>Valyrian Language Translator <img src="/images/targaryen-house.jpg" alt="targaryen-house"></h1>
+            <h1>Valyrian Language Translator</h1>
         </nav>
     </header>
 
